Sync all content

--- a/content/resources/2-082s03-th.md
+++ b/content/resources/2-082s03-th.md
@@ -13,4 +13,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 2-082s03-th.jpg
 uid: dfdb7dce-e9ff-35d1-4b55-8032a3bbb081
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
