--- a/content/resources/2-082s03.md
+++ b/content/resources/2-082s03.md
@@ -13,4 +13,8 @@ ocw_type: OCWImage
 resourcetype: Image
 title: 2-082s03.jpg
 uid: 43dfd58c-0358-dd80-9267-e10ff528a5b7
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
