--- a/content/resources/ps2_2003.md
+++ b/content/resources/ps2_2003.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: PS2_2003.pdf
 uid: 6cae35e5-397d-2714-532f-c50068ba3268
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
