--- a/content/resources/ps3_2003.md
+++ b/content/resources/ps3_2003.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: PS3_2003.pdf
 uid: 0851155b-feff-d32b-2cbc-77c36399beb0
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
