--- a/content/resources/ps4_2003.md
+++ b/content/resources/ps4_2003.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: PS4_2003.pdf
 uid: f968db57-a6ac-f840-c169-d120a60843c7
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
