--- a/content/resources/ps_1_2003_1.md
+++ b/content/resources/ps_1_2003_1.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: ps_1_2003_1.pdf
 uid: a0a32f70-50bd-b97c-6d5b-a19971c28cc9
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
