--- a/content/resources/ps_1_2003_2.md
+++ b/content/resources/ps_1_2003_2.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: ps_1_2003_2.pdf
 uid: 4cddea71-bc71-6698-9b93-ff72b6542649
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
