--- a/content/resources/ps_4_1_2003_2001.md
+++ b/content/resources/ps_4_1_2003_2001.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Other
 title: ps_4_1_2003_2001.mcd
 uid: 1db866b3-aa94-f073-0f49-c0e065c9b2a1
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
