--- a/content/resources/ps_4_1_2003_given_2001.md
+++ b/content/resources/ps_4_1_2003_given_2001.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Other
 title: ps_4_1_2003_given_2001.mcd
 uid: 6a29e2c8-b8df-7af4-b8b9-45c35a02d4cd
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
