--- a/content/resources/ps_4_2_2003.md
+++ b/content/resources/ps_4_2_2003.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: ps_4_2_2003.pdf
 uid: 28c9c2ff-ee5d-3fdd-452a-6544b4f26877
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
