--- a/content/resources/ps1_2003.md
+++ b/content/resources/ps1_2003.md
@@ -11,4 +11,8 @@ parent_type: CourseSection
 resourcetype: Document
 title: PS1_2003.pdf
 uid: b98e2d6f-529c-5c7c-67ba-ea0fedba59d7
+video_files:
+  video_thumbnail_file: null
+video_metadata:
+  youtube_id: null
 ---
