--- a/content/resources/2-082s03.md
+++ b/content/resources/2-082s03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: ''
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/2-082-ship-structural-analysis-design-13-122-spring-2003/43dfd58c0358dd809267e10ff528a5b7_2-082s03.jpg
+file: /media/courses/2-082-ship-structural-analysis-design-13-122-spring-2003/43dfd58c0358dd809267e10ff528a5b7_2-082s03.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An example of synthesis models used for early stage design and technology
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: Computer-generated model of a ship.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 2-082s03.jpg
